# eps-cdk-utils

./: .gitignore  .grype.yaml  .npmrc  .pre-commit-config.yaml  .tool-versions  .trivyignore.yaml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml  release.config.js  sonar-project.properties  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/languages/: INSTRUCTIONS-TYPESCRIPT.md
.github/scripts/: check_ecr_image_scan_results.sh
.github/workflows/: ci.yml  dependabot_auto_approve_and_merge.yml  docker_image_build.yml  docker_image_upload.yml  package_npm_code.yml  pr_title_check.yml  pull_request.yml  release.yml  sync_copilot.yml  update_dev_container_version.yml
.trivy_out/: license_scan.txt
docker/: Dockerfile  entrypoint.sh
release_notes/: v1.3.1.md  v1.3.2.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md  v1.4.4.md  v1.6.1.md  v1.6.2.md  v1.7.0.md  v1.7.1.md  v1.7.2.md  v1.8.0.md  v1.8.1.md
