[project]
python = "^3.14"
name = "eps-cdk-uitl"

[tool.poetry]
name = "eps-cdk-uitl"
version = "0.0.1-alpha"
description = "EPS CDK Utils"
license = "MIT"
authors = [
    "EPS Team"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-cdk-util"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pre-commit = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pip-licenses = "^5.5.1"

[tool.poetry.scripts]
